# octopy

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: examples.py
src/octopy/: __init__.py  client.py  http_client.py  models.py
