[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "octopy-energy-api"
version = "0.1.0"
description = "A modern Python wrapper for the Octopus Energy API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Sam P", email = "s.pur@outlook.com" }
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]